--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,16 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  bloc: ^9.0.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.0
+  gap: ^3.0.1
 
 dev_dependencies:
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
